--- a/src/containers/PerfectStock/Inventory/CreateOrderModal/SkuSelection/ProductInfo/index.module.scss
+++ b/src/containers/PerfectStock/Inventory/CreateOrderModal/SkuSelection/ProductInfo/index.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../design-system/colors';
+@import '../../../../../../design-system/new-colors';
 
 .productInfoContainer {
   height: 100%;
@@ -21,15 +21,29 @@
   display: flex;
   flex-direction: column;
   justify-content: stretch;
+  font-size: 12px !important;
+  color: $grey_8;
+  font-weight: $fontweight_medium;
 }
 
 .productMetaDetails {
   display: flex;
   align-items: center;
+  margin-top: 3px;
 
   img {
     margin-right: 10px;
   }
 
-  font-size: 12px !important;
+  .metaInformation {
+    span {
+      font-size: 8px !important;
+      color: $grey_8 !important;
+      font-weight: $fontweight_medium;
+    }
+
+    .asin {
+      margin-top: 2px;
+    }
+  }
 }
